tests/err_qty/trailing_mul.stderr
error: unexpected end of input, expected quantity
 --> tests/err_qty/trailing_mul.rs:5:16
  |
5 |     let _err = qty![1.0 m *];
  |                ^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `qty` (in Nightly builds, run with -Z macro-backtrace for more info)
